<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="?attr/colorSurface"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_weight="5">

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="13">

            <EditText
                android:id="@+id/inputEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="end"
                android:padding="0dp"
                android:text="@string/nine"
                android:textSize="48sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="3">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:gravity="end"
                android:text="9346837693"
                android:textIsSelectable="true"
                android:textSize="48sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_clear"
                style="@style/OperationButtonStyle"
                android:text="@string/clear" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sqr"
                style="@style/OperationButtonStyle"
                android:text="@string/clear" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_pow"
                style="@style/OperationButtonStyle"
                android:text="@string/clear" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_divide"
                style="@style/OperationButtonStyle"
                android:text="@string/clear" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_seven"
                style="@style/NumberButtonStyle"
                android:text="@string/seven" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_eight"
                style="@style/NumberButtonStyle"
                android:text="@string/eight" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_nine"
                style="@style/NumberButtonStyle"
                android:text="@string/nine" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multiply"
                style="@style/OperationButtonStyle"
                android:contentDescription="@string/multiply"
                app:icon="@drawable/baseline_close_24"
                app:iconSize="35dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_four"
                style="@style/NumberButtonStyle"
                android:text="@string/four" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_five"
                style="@style/NumberButtonStyle"
                android:text="@string/five" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_six"
                style="@style/NumberButtonStyle"
                android:gravity="center"
                android:text="@string/six" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_minus"
                style="@style/OperationButtonStyle"
                android:contentDescription="@string/minus"
                app:icon="@drawable/baseline_remove_24"
                app:iconGravity="start"
                app:iconSize="35dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_one"
                style="@style/NumberButtonStyle"
                android:text="@string/one" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_two"
                style="@style/NumberButtonStyle"
                android:text="@string/two" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_three"
                style="@style/NumberButtonStyle"
                android:text="@string/three" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_plus"
                style="@style/OperationButtonStyle"
                android:contentDescription="@string/plus"
                app:icon="@drawable/baseline_add_24"
                app:iconSize="35dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_zero"
                style="@style/NumberButtonStyle"
                android:text="@string/zero" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_comma"
                style="@style/NumberButtonStyle"
                android:text="@string/comma" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_remove"
                style="@style/NumberButtonStyle"
                android:contentDescription="@string/remove"
                android:gravity="center"
                app:icon="@drawable/baseline_backspace_24"
                app:iconSize="30dp"
                app:iconTint="?attr/colorOnSurface" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/equalsButton"
                style="@style/EqualsButtonStyle"
                android:contentDescription="@string/equals"
                app:icon="@drawable/baseline_drag_handle_24"
                app:iconGravity="end"
                app:iconSize="30dp" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>